--- a/style/main.css
+++ b/style/main.css
@@ -12,27 +12,27 @@ li {
     list-style-type: none;
 }
 
-body {
+* {
     box-sizing: border-box;
 }
 
-video {
+/*video {*/
     /*margin: 0;*/
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    overflow: hidden;
-    -moz-object-fit: cover;
-    -o-object-fit: cover;
-    -wekit-object-fit: cover;
-    height: 100%;
-    min-width: 100%;
-    z-index: -1;
-    background-color: rgba(52, 73, 94, 0.95);
-}
+    /*display: block;*/
+    /*position: absolute;*/
+    /*top: 0;*/
+    /*right: 0;*/
+    /*bottom: 0;*/
+    /*left: 0;*/
+    /*overflow: hidden;*/
+    /*-moz-object-fit: cover;*/
+    /*-o-object-fit: cover;*/
+    /*-webkit-object-fit: cover;*/
+    /*height: 100%;*/
+    /*min-width: 100%;*/
+    /*z-index: -1;*/
+    /*background-color: rgba(52, 73, 94, 0.95);*/
+/*}*/
 
 /*@media (min-aspect-ratio: 16/9) {*/
     /*#welcome > video { height: 300%; top: -100%; }*/
@@ -66,16 +66,10 @@ video {
     text-decoration: none;
 }
 
-.logo {
-    display: inline-block;
-    margin: 50px 0 0 150px;
-}
-
 .nav {
-    clear: both;
     display: inline-block;
     float: right;
-    margin: -35px 125px 0 0;
+    margin-top: 65px;
 }
 
 .nav-list {
@@ -84,87 +78,75 @@ video {
     color: #fff;
 }
 
-.welcome {
-    /*min-height: 777px;*/
-    background: rgba(255, 255, 255, .1);
-    position: relative;
+#bg {
+    position: absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height: 100%;
+    z-index:-3;
+
 }
 
-.welcome-content-center {
-    text-align: center;
+.welcome {
     padding-bottom: 175px;
+    /*background: rgba(255, 255, 255, .1);*/
+    position: relative;
+    /*background: url("../img/consultation-bg.jpg") no-repeat;*/
+    /*background-size: cover;*/
 }
 
 .welcome-title {
-    padding-top: 150px;
-    font: 60px 'droid sans', sans-serif;
+    font: 80px 'droid sans', sans-serif;
     color: #fff;
     font-weight: bold;
-    clear: both;
-    width: 800px;
-    display: inline-block;
+    text-align: center;
 }
 
 .explore {
+    text-align: center;
     text-decoration: none;
-    display: inline-block;
-    font: 14px 'droid serif', sans-serif;
+    display: block;
+    width: 150px;
+    margin: 0 auto;
+    font: 28px 'droid serif', sans-serif;
     color: #fff;
 }
 
-#about {
+.about {
     color: #fff;
     position: relative;
     background-color: #34495e;
     font: 14px 'droid serif', sans-serif;
-}
-
-.about-content-center {
-    width: 900px;
-    margin: 0 auto;
-    padding: 50px 0;
+    padding: 125px 0;
 }
 
 .about-title, .portfolio-title, .contact-title, .team-title {
     text-align: center;
     font-family: 'Droid Sans', sans-serif;
     font-weight: bold;
+    margin-bottom: 50px;
+    font-size: 45px;
 }
 
 .about-content {
-    width: 650px;
     font-size: 16px;
-    margin: 0 220px 0 100px;
-}
-
-.categories {
-    margin: 130px 0 50px 0;
 }
 
 .categories-list {
     font: 18px 'droid sans', sans-serif;
-    display: inline-block;
     text-align: center;
-    overflow: hidden;
-    padding-right: 100px;
 }
 
-.categories-list:last-child {
-    padding: 0;
-}
 
 .categories-content {
     font: 14px 'droid serif', sans-serif;
     display: inline-block;
-    width: 225px;
 }
 
-#portfolio {
+.portfolio {
     position: relative;
-}
-
-.portfolio-content-center {
-    padding: 55px;
+    padding: 140px 0 110px 0;
 }
 
 .portfolio-title {
@@ -204,29 +186,47 @@ video {
 }
 
 .portfolio-categories-list {
-    display: inline-block;
-    position: relative;
-    margin: 23px;
+    text-align: center;
+    margin-top: 20px;
     overflow: hidden;
-    border: 1px solid #808080;
-    padding: 5px;
 }
 
-.portfolio-categories-list div {
+.portfolio-categories-list img {
+    display: block;
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+
+}
+.portfolio-categories-item {
+    padding: 15px;
+}
+.portfolio-categories-wrap {
+    border: 1px solid #808080;
+    padding: 8px;
+    overflow: hidden;
+
+}
+.portfolio-categories-wrap-item {
+    position: relative;
+
+}
+
+.portfolio-list-hover {
     text-align: center;
     display: none;
     position: absolute;
-    width: 348px;
-    height: 260px;
+    padding: 30% 0;
+    width: 100%;
+    height: 100%;
     background-color: rgba(52, 73, 94, 0.95);
 }
 
-.portfolio-categories-list:hover div {
+.portfolio-categories-item:hover .portfolio-list-hover {
     display: block;
 }
 
 .portfolio-project-title {
-    margin-top: 100px;
     font: 24px 'droid sans', sans-serif;
     color: #fff;
     font-weight: bold;
@@ -243,21 +243,15 @@ video {
     border-radius: 14px;
 }
 
-#team {
+.team {
     position: relative;
     background: #2980b9;
     color: #fff;
-}
-
-.team-content-center {
-    width: 700px;
-    margin: 0 auto;
-    padding: 50px 0;
+    padding: 110px 0;
 }
 
 .team-members-list {
     display: inline-block;
-    width: 300px;
     text-align: center;
     font: 14px 'droid serif', sans-serif;
 }
@@ -265,10 +259,12 @@ video {
 .team-title {
     margin-bottom: 80px;
 }
-
-.team-members-list:first-child {
-    padding-right: 95px;
+.team-members-list p {
+    display: inline-block;
+    padding-bottom: 50px;
 }
+
+
 
 .team-members-list h3 {
     font: 18px 'droid sans', sans-serif;
@@ -279,60 +275,55 @@ video {
     margin-left: 20px;
 }
 
-#contact {
+.contact {
     position: relative;
-    min-height: 550px;
-    padding-bottom: 50px;
-}
-
-.contact-content-center {
-    width: 600px;
-    margin: 0 auto;
-    padding: 50px 0;
+    padding:120px 0 170px 0;
 }
 
 .contact-title, .contact-content {
     color: #2c3e50;
-    text-align: center;
-}
-
-.contact-content {
-    font: 16px 'droid sans', sans-serif;
     font-weight: bold;
 }
 
-.name, .email, .coments {
+.contact-content {
+    font: 26px 'droid sans', sans-serif;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 60px;
+}
+
+.name, .email, .comments {
     border: none;
     border-bottom: 1px solid #2ecc71;
+    width: 100%;
 }
-
+.comments-cont {
+    margin-top: 65px;
+}
 .contact-form {
     display: inline-block;
-    float: left;
+    overflow: hidden;
 }
 
-#contact dl {
-    float: right;
-    display: inline-block;
-}
-
-#contact dt {
+.contact .our-contact-title {
     margin-top: 15px;
-    font: 12px 'droid sans', sans-serif;
+    font: 16px 'droid sans', sans-serif;
     font-weight: bold;
     color: #2c3e50;
 }
 
-#contact dt:first-child {
+.contact .our-contact-title:first-child {
     margin: 0;
 }
 
-#contact dd {
-    font: 14px 'droid sans', sans-serif;
+.our-contact  {
+    font: 20px 'droid sans', sans-serif;
     color: #2c3e50;
 }
 
 .send-form {
+    width: 130px;
+    text-align: center;
     background-color: #2ecc71;
     padding: 5px 10px;
     font: 14px 'droid serif', sans-serif;
@@ -345,35 +336,209 @@ video {
 
 .footer {
     background-color: #2c3e50;
+    overflow: hidden;
 }
 
-.footer-logo {
-    display: inline-block;
-    margin: 50px 0 0 150px;
+.contact-details {
+    clear: both;
+    margin: 40px 0 70px 0;
+    display: block;
+    overflow: hidden;
 }
 
-.contact-detials {
-    padding-left: 150px;
-}
-
-.contact-detials-list {
-    font: 12px 'droid sans', sans-serif;
+.contact-details-list {
+    font: 16px 'droid sans', sans-serif;
     font-weight: bold;
     color: #fff;
     display: inline-block;
-    max-width: 130px;
-    margin: 30px 0 50px 0;
-}
-.contact-detials-list:first-child {
-    margin-right: 150px;
-}
-
-.social-button {
-    display: inline-block;
-    margin-left: 100px;
 }
 
 .social-button a {
     display: inline-block;
-    margin-left: 30px;
+    margin-right: 20px;
+}
+.social-button a img {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+.social-button a:last-child {
+    display: inline-block;
+    margin-right: 0;
+}
+
+@media(min-width:320px) {
+    .logo, .footer-logo {
+        margin: 30px 0 0 0;
+    }
+    .categories-list, .team-members-list, .team-members-list {
+        padding-top: 90px;
+        display: block;
+        width: 300px;
+        margin: 0 auto;
+    }
+
+    .welcome-title {
+        width: 220px;
+        margin: 0 auto;
+        font-size: 35px;
+        padding: 80px 0 65px 0;
+    }
+    .nav {
+        display: none;
+    }
+    .contact-form, .contact-content {
+        width: 300px;
+        margin: 0 auto ;
+        display: block;
+    }
+    .send-form {
+        margin: 0 auto 60px;
+        display: block;
+    }
+    .our-contact {
+        width: 190px;
+    }
+    .our-contact li:first-child {
+        margin: 90px 40px 0 0;
+    }
+    .our-contact li{
+        height: 100px;
+        display: inline-block;
+        width: 190px;
+    }
+    .our-contact p {
+        display: inline-block;
+        width: 190px;
+    }
+    .contact-details-list {
+       float: left;
+        clear: both;
+    }
+    .social-button {
+        float: none;
+        clear: both;
+    }
+}
+
+@media(min-width:500px) {
+    .nav {
+        display: inline-block;
+        margin: 60px 0 0 0;
+    }
+    .logo, .footer-logo {
+        margin: 40px 0 0 0;
+    }
+
+    .contact-form, .contact-content {
+        width: 400px;
+        margin: 0 auto 60px;
+        display: block;
+    }
+    .our-contact {
+        margin: 0 auto;
+        width: 400px;
+    }
+    .our-contact li:first-child {
+        margin: 90px 40px 0 0;
+    }
+    .our-contact li{
+        height: 100px;
+        display: inline-block;
+        width: 190px;
+    }
+    .our-contact p {
+        display: inline-block;
+        width: 190px;
+    }
+    .contact-details-list {
+        display: inline-block;
+        width: 230px;
+    }
+    .social-button {
+        float: none;
+        clear: none;
+    }
+}
+
+@media(min-width:768px) {
+    .nav {
+        margin: 70px 0 0 0;
+    }
+    .categories-list {
+        padding-top: 90px;
+        display: block;
+        width: 300px;
+        margin: 0 auto;
+    }
+    .logo, .footer-logo  {
+        margin: 50px 0 0 0;
+    }
+    .welcome-title {
+        width: 360px;
+        margin: 0 auto;
+        font-size: 60px;
+        padding: 165px 0 115px 0;
+    }
+    .contact-form, .contact-content {
+        width: 550px;
+        margin: 0 auto 60px;
+        display: block;
+    }
+    .send-form {
+        margin: 0 auto;
+        display: block;
+    }
+    .our-contact {
+        width: 520px;
+    }
+
+    .our-contact li{
+        height: 100px;
+        display: inline-block;
+        width: 190px;
+    }
+    .our-contact li:first-child {
+        margin: 90px 40px 0 0;
+    }
+    .our-contact p {
+        display: inline-block;
+        width: 190px;
+    }
+    .contact-details-list {
+        float: none;
+        display: inline-block;
+        width: 230px;
+    }
+    .social-button {
+        float: right;
+    }
+}
+
+@media(min-width:992px) {
+    .nav {
+        margin: 85px 0 0 0;
+    }
+    .welcome-title {
+        width: 830px;
+        padding: 190px 0 120px 0;
+        font-size: 80px;
+    }
+    .logo, .footer-logo {
+        margin: 75px 0 0 0;
+    }
+
+    .send-form {
+        display: inline-block;
+    }
+    .our-contact li:first-child {
+        margin: 0;
+    }
+    .contact-details-list {
+        width: 230px;
+        display: inline-block;
+    }
+}
+.contact-details-list:last-child {
+    margin-left: 0;
 }
